Empezando la programacion de Permisos V2

--- a/Manejador/Manejador.csproj
+++ b/Manejador/Manejador.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ManejadorHerramientas.cs" />
     <Compile Include="ManejadorLogin.cs" />
+    <Compile Include="ManejadorPermisos.cs" />
     <Compile Include="ManejadorProductos.cs" />
     <Compile Include="ManejadorUsuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
